--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
-    "eslint": "^8.29.0",
-    "eslint-config-dino": "workspace:*",
-    "prettier": "^2.8.0",
-    "turbo": "latest"
+    "turbo": "latest",
+    "typescript": "^5.0.4"
   },
   "packageManager": "pnpm@8.1.1"
 }
