--- a/packages/eslint-config-dino/package.json
+++ b/packages/eslint-config-dino/package.json
@@ -2,14 +2,15 @@
   "name": "eslint-config-dino",
   "version": "0.0.0",
   "main": "index.js",
-  "license": "MIT",
   "dependencies": {
-    "eslint-config-next": "latest",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "7.29.4",
-    "eslint-config-turbo": "latest"
-  },
-  "publishConfig": {
-    "access": "public"
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5"
   }
 }
