--- a/packages/react-chrome-dino-ts/package.json
+++ b/packages/react-chrome-dino-ts/package.json
@@ -1,29 +1,38 @@
 {
   "name": "react-chrome-dino-ts",
   "version": "0.0.0",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./index.css": "./dist/index.css"
+  },
   "sideEffects": false,
   "license": "MIT",
   "files": [
     "dist/**"
   ],
   "scripts": {
-    "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
-    "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
+    "build": "tsup src/index.ts",
+    "dev": "tsup src/index.ts --watch",
     "lint": "eslint \"src/**/*.ts*\"",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
+  },
+  "peerDependencies": {
+    "react": "^17 || ^18",
+    "react-dom": "^17 || ^18"
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
-    "eslint": "^8.15.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
     "eslint-config-dino": "workspace:*",
     "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "tsconfig-dino": "workspace:*",
-    "tsup": "^5.10.1",
-    "typescript": "^4.5.3"
+    "tsup": "^5.10.1"
   },
   "publishConfig": {
     "access": "public"
