--- a/packages/react-chrome-dino-ts/package.json
+++ b/packages/react-chrome-dino-ts/package.json
@@ -1,6 +1,8 @@
 {
   "name": "react-chrome-dino-ts",
   "version": "0.0.0",
+  "main": "./dist/index.mjs",
+  "typings": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
