--- a/packages/react-chrome-dino-ts/package.json
+++ b/packages/react-chrome-dino-ts/package.json
@@ -22,6 +22,10 @@
     "dist"
   ],
   "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./index.css": "./src/Dino.css"
+  },
   "scripts": {
     "build": "tsup src --dts",
     "dev": "tsup src --watch",
